<resources>
    <string name="app_name">InventoryApp</string>
    <string name="error_unknown_URI_query">Cannot query unknown URI %s</string>
    <string name="error_insertion_not_supported">Insertion is not supported for %s</string>
    <string name="error_update_not_supported">Update is not supported for %s</string>
    <string name="error_deletion_not_supported">Deletion is not supported for %s</string>
    <string name="error_name_required">Item requires a name</string>
    <string name="error_insert_failed">Failed to insert row for %s</string>
    <string name="error_unknown_URI">Unknown URI %1$s " with match %2$d</string>
    <string name="no_items_to_show">There are no items to show</string>
    <string name="add_one_item">Add one item by tapping the button</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>

    <string name="price">Price</string>
    <string name="sale">Sale</string>

    <string name="error_no_quantity_to_sell">There is no available quantity to sell</string>
    <string name="error_quantity_update">Error updating the quantity</string>
    <string name="quantity_update_successful">Quantity update successful</string>

    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="item_image">Item image</string>
    <string name="name">Name</string>
    <string name="quantity">Qty</string>
    <string name="order_from_supplier">Tap to order from supplier</string>
    <string name="could_not_dial">Could not start Dial activity</string>
    <string name="could_not_mail">Could not start Mail activity</string>
    <string name="mail_body">Please send additional units of %s</string>
    <string name="email_not_valid">Email address is not valid</string>
    <string name="phone_not_valid">Phone number is not valid</string>
    <string name="no_image_provided">No image provided for this item</string>
    <string name="delete_record">Delete record</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete_all_dialog_msg">Delete All Items?</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="order_to_supplier">Order to supplier</string>

    <string name="supplier_name">Name</string>
    <string name="supplier_email">Email</string>
    <string name="supplier_phone">Phone</string>
    <string name="save">Save</string>
    <string name="item_details_activity_title">Item details</string>
    <string name="add_item_activity_title">Add new item</string>
    <string name="error_no_item_name">Item Name is required</string>
    <string name="error_no_price">Price is required</string>
    <string name="error_no_supplier_name">Supplier Name is required</string>
    <string name="error_no_supplier_email">Supplier Email Address is required</string>
    <string name="error_no_supplier_phone">Supplier Phone Number is required</string>
    <string name="error_no_item_image">Item Image is required</string>
    <string name="error_inserting_item">Error inserting new item</string>
    <string name="new_record_inserted">New record inserted</string>
    <string name="price_too_high">Price is greater than the maximum allowed (%d)</string>
    <string name="pick_image_bt">Pick an image for this item</string>
    <string name="supplier_data">Supplier Data</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="enter_supplier_name">Enter Supplier Name</string>
    <string name="enter_supplier_email">Enter Supplier Email</string>
    <string name="enter_supplier_phone_number">Enter Supplier Phone Number</string>

</resources>
