<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp">

        <TextView
            style="@style/editor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/name_tv"
            style="@style/editor_value"
            android:layout_marginLeft="8dp"
            tools:text="Item name placeholder"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp">

        <TextView
            style="@style/editor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/price_tv"
            style="@style/editor_value"
            android:layout_marginLeft="8dp"
            tools:text="150"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/editor_label"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:text="@string/quantity"/>

            <ImageButton
                android:id="@+id/down_bt"
                style="@style/up_down_buttons"
                android:contentDescription="@string/increase"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"/>

            <TextView
                android:id="@+id/quantity_tv"
                style="@style/editor_value"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center_horizontal"
                tools:text="15"/>

            <ImageButton
                android:id="@+id/up_bt"
                style="@style/up_down_buttons"
                android:contentDescription="@string/decrease"
                android:src="@drawable/ic_arrow_drop_up_black_24dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/editor_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/order_from_supplier"/>

    <TextView
        android:id="@+id/supplier_name_tv"
        style="@style/editor_value.contact"
        android:gravity="center_vertical"
        tools:text="Supplier Name Placeholder"/>

    <TextView
        android:id="@+id/email_tv"
        style="@style/editor_value.contact"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:minHeight="48dp"
        tools:text="dummy@testemail.com"/>

    <TextView
        android:id="@+id/phone_tv"
        style="@style/editor_value.contact"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:minHeight="48dp"
        tools:text="555-55-5555"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/item_image"
        android:scaleType="centerInside"
        android:src="@drawable/sampleImage"
        />
</LinearLayout>
