<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".AddItemActivity">

        <LinearLayout
            style="@style/item_details">

            <TextView
                style="@style/editor_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/name_tv"
                style="@style/editor_value.edit_texts"
                android:inputType="text"
                tools:text="Item Name Placeholder">

                <requestFocus/>
            </EditText>

        </LinearLayout>

        <LinearLayout
            style="@style/item_details">

            <TextView
                style="@style/editor_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/price"/>

            <EditText
                android:id="@+id/price_tv"
                style="@style/editor_value.edit_texts"
                android:inputType="number"
                tools:text="Item Price Placeholder">
            </EditText>

        </LinearLayout>

        <TextView
            style="@style/divider"/>

        <TextView
            android:id="@+id/textView"
            style="@style/editor_label.order"
            android:text="@string/supplier_data"/>

        <LinearLayout
            style="@style/item_details">

            <TextView
                style="@style/editor_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/supplier_name"/>

            <EditText
                android:id="@+id/supplier_name_tv"
                style="@style/editor_value.edit_texts"
                android:inputType="text"
                tools:text="Supplier Name Placeholder"/>

        </LinearLayout>

        <LinearLayout
            style="@style/item_details">

            <TextView
                style="@style/editor_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/supplier_email"/>

            <EditText
                android:id="@+id/supplier_mail_tv"
                style="@style/editor_value.edit_texts"
                android:inputType="textEmailAddress"
                tools:text="Supplier Email Placeholder"/>

        </LinearLayout>

        <LinearLayout
            style="@style/item_details">

            <TextView
                style="@style/editor_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/supplier_phone"/>

            <EditText
                android:id="@+id/supplier_phone_tv"
                style="@style/editor_value.edit_texts"
                android:inputType="phone"
                tools:text="Supplier Phone Placeholder"/>
        </LinearLayout>

        <TextView
            style="@style/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_image_iv"
                style="@style/image"
                android:layout_width="0dp"
                android:layout_weight="4"/>

            <ImageButton
                android:id="@+id/select_image_bt"
                style="@style/pick_image_bt"
                android:src="@drawable/ic_image_black_24dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/save_bt"
            style="@style/bottom_buttons"
            android:text="@string/save"/>
    </LinearLayout>

</ScrollView>